corrected overflow (all) scroll to overflow-y scroll only

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 body {
 	font-family: "Poppins", sans-serif;
-	overflow: scroll;
+	overflow-y: scroll;
 	width: 100vw;
 	height: 100vh;
 	display: grid;
